# AI-server

./: .gitignore  README.md  start_worker.sh
ragstar-backend/: .env.example  README.md  requirements.txt
ragstar-backend/app/: worker.py
ragstar-backend/app/agent/: graph.py  rag_runner.py  state.py
ragstar-backend/app/baseline/: gpt_baseline.py
ragstar-backend/app/core/: llm_factory.py  settings.py  vllm_manager.py
ragstar-backend/app/database/: chromadb_client.py
ragstar-backend/app/network/: web_client.py
ragstar-backend/data/: kb_chunks.jsonl  kb_docs.jsonl  oom_logs.jsonl  qa_ground_truth.jsonl
ragstar-backend/docs/: kb_chunks_to_chromaDB.py  kb_docs.csv  kb_docs_csv_to_json.py  kb_docs_to_chunks.py
ragstar-backend/experiments/: build_paper_artifacts.py  debug_9b_naive_picker.py  exp1_retrieval.py  exp2_generation.py  visualize_exp2.py
ragstar-backend/experiments/legacy/: exp2_generation.py  human_eval.py  run_exp2_matrix.py
ragstar-backend/tests/: conftest.py  exp1_failure_handoff.md  live_test_node2_stability.py  live_test_node4_stability.py  live_test_ollama.py  mock_server.py  run_all_python_tests.py  set_model_of_live_tests.py  test_all_nodes_smoke.py  test_chromadb_integration.py  test_exp1_retrieval.py  test_exp2_generation.py  test_kernel_param_recommender.py  test_kernel_version_check.py  test_memory_calculator.py  test_node_1.py  test_node_2.py  test_node_3.py  test_node_3_tool_interactions.py  test_node_4.py  test_run_exp2_matrix.py  test_search_kb_security.py
ragstar-backend/tests/node_1_logs/: case10_malloc_cgroup_oom.txt  case1_global.txt  case2_cgroup.txt  case3_log017.txt  case4_keystone.txt  case5_flasherav.txt  case6_memleak.txt  case7_storm.txt  case8_java_high_ram.txt  (+1 more)
vllm/: .gitignore  README.md  manage.sh  model_profiles.json  pyproject.toml  serve.env.example  start.sh
(+10 files in other folders)
